# starfish

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README.md  acinclude.m4  aclocal.m4  autogen.sh  config.status  configure  configure.ac  libtool
data/: Makefile  Makefile.am  Makefile.in
data/bflang/: JQuery.bfinc  Makefile  Makefile.am  Makefile.in  ada.bflang2  all-css.bfinc  all-html.bfinc  all-html5.bfinc  all-javascript.bfinc  all-php.bfinc  all-vbscript.bfinc  asp-vbscript.bflang2  asp.bflang2  bflang2.bflang2  c.bflang2  cfml.bflang2  chuck.bflang2  clojure.bflang2  cpp.bflang2  css-rules.bfinc  css-selectors.bfinc  css.bflang2  d.bflang2  diff.bflang2  go.bflang2  html.bflang2  html5.bflang2  java.bflang2  javascript.bflang2  json.bflang2  jsp.bflang2  lua.bflang2  mediawiki.bflang2  octave.bflang2  pascal.bflang2  perl.bflang2  php.bflang2  po.bflang2  python.bflang2  r.bflang2  (+13 more)
data/bflib/: Makefile  Makefile.in  bflib_python_2.3.xml
data/templates/: Makefile  Makefile.in
desktop-data/: Makefile  Makefile.in  bluefish.appdata.xml  bluefish.appdata.xml.in  bluefish.desktop.in
images/: Makefile  Makefile.in
macosx/: Info.plist  Makefile  Makefile.am  Makefile.in  config.osxapp
man/: Makefile  Makefile.in
po/: Makefile  Makefile.in  POTFILES  ar.gmo  ar.po  bg.gmo  bg.po  bluefish.pot  ca.gmo  ca.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  en.gmo  en.po  es.gmo  es.po  eu.gmo  eu.po  fa.gmo  fa.po  fi.gmo  fi.po  fr.gmo  fr.po  gl.gmo  gl.po  hu.gmo  hu.po  it.gmo  it.po  ja.gmo  ja.po  ko.gmo  ko.po  (+32 more)
(+649 files in other folders)
